--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,5 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-        - run: docker compose build
+        - run: echo "just echoing not building"
 
